--- a/components/services/preparations/html.template
+++ b/components/services/preparations/html.template
@@ -15,7 +15,7 @@
     {% endfor %}
     </ul>-->
     <h1>Preparations</h1>
-<p><a href='retrieval/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of retrieval</a></p>
+<p>Previous stage: <a href='retrieval/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of retrieval</a></p>
 <p>We conduct several inference steps (e.g. unzip and xls2csv) to get data as shown below.</p>
 <table border="1">
 <tr>
@@ -41,7 +41,7 @@
 <td>{{row.time.value|date:"H:i l F jS \o"}}</td>
 <th>unzip</th>
 <td><a href="{{row.source.value}}">{{row.source.value}}</a></td>
-<td><a href="{{row.conclusion.value}}">{{row.conclusion.value}}</a></td>
+<td><a href="{{row.conclusion.value}}">{{row.conclusion.value}}</a> ({{row.alg.value}} = {{row.hashValue.value}})</td>
 <!--<td>{{row.engine.value}}</td>-->
 <td>{{row.actor.value}}</td>
 </tr>
@@ -51,14 +51,14 @@
 <td>{{row.time.value|date:"H:i l F jS \o"}}</td>
 <th>xls2csv</th>
 <td><a href="{{row.source.value}}">{{row.source.value}}</a></td>
-<td><a href="{{row.conclusion.value}}">{{row.conclusion.value}}</a></td>
+<td><a href="{{row.conclusion.value}}">{{row.conclusion.value}}</a> ({{row.alg.value}} = {{row.hashValue.value}})</td>
 <!--<td>{{row.engine.value}}</td>-->
 <td>{{row.actor.value}}</td>
 </tr>
     {% endfor %}
 
 </table>
-<p><a href='conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></p>
+<p>Subsequent stage: <a href='conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></p>
 <!--        <ul>
       <li>hi</li>
     {% for row in models.get %}
