add links in conversion and publishings

--- a/components/services/conversion/html.template
+++ b/components/services/conversion/html.template
@@ -7,6 +7,7 @@
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
+<p>Previous stage: <a href='{{lodspk.baseUrl}}preparations/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of preparations</a></p>
     <ul>
       <li>Time Enhancement parameters were created</li>
       <li>User account that made Enhancement parameters</li>
@@ -38,5 +39,6 @@
           {% if row.person %}<li>{{row.person.value}} the person with the account.</li> {%endif%}
        </ul>
     {% endfor %}
+<p>Subsequent stage: <a href='{{lodspk.baseUrl}}publishings/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of publishings</a></p>
   </body>
 </html>
