--- a/components/services/publishings/html.template
+++ b/components/services/publishings/html.template
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" {% for i, ns in base.ns %}xmlns:{{i}}="{{ns}}" 
     {%endfor%}version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
-    <title>My new Service</title>
+    <title>csv2rdf4lod provenance overview: publishings phase</title>
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
@@ -15,22 +15,25 @@
     {% endfor %}
     </ul>
 -->
+<h1>Publishings</h1>
 <p>Previous stage: <a href='{{lodspk.baseUrl}}conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></p>
 <p>The converted data is loaded into a triple store as a named graph. Related provenance infomation is shown as below.</p>
 <table border="1">
 <tr>
-<th>Graph name</th>
 <th>Time</th>
 <th>Inference rule</th>
-<th>Engine used</th>
+<th>Files loaded into the graph</th>
+<th>Graph name</th>
+<!--<th>Engine used</th>-->
 <th>Actor involved</th>
 </tr>
  {% for row in models.namedGraphsKnow %}
 <tr>
-<td><a href="{{row.graphName.value}}">{{row.graphName.value}}</a></td>
-<td>{{row.when.value}}</td>
+<td>{{row.when.value|date:"H:i l F jS \o"}}</td>
 <td><a href="{{row.rule.value}}">{{row.rule.value}}</a></td>
-<td><a href="{{row.engineType.value}}">{{row.engineType.value}}</a></td>
+<td>{{row.fileFirst.value}}<br><br>{{row.fileFirstFirst.value}}</td>
+<td><a href="{{row.graphName.value}}">{{row.graphName.value}}</a></td>
+<!--<td><a href="{{row.engineType.value}}">{{row.engineType.value}}</a></td>-->
 <td><a href="{{row.user.value}}">{{row.user.value}}</a></td>
 </tr>
     {% endfor %}
