--- a/components/services/retrievals/html.template
+++ b/components/services/retrievals/html.template
@@ -4,11 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml" {% for i, ns in base.ns %}xmlns:{{i}}="{{ns}}" 
     {%endfor%}version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
-    <title>Retrieval Provenance</title>
+    <title>csv2rdf4lod provenance overview: retrievals phase</title>
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
-    <h1>Retrieval</h1>
+    <h1>Retrievals</h1>
 
     <!--	<ul>
       <li>hi</li>
