--- a/components/services/publishings/html.template
+++ b/components/services/publishings/html.template
@@ -4,39 +4,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml" {% for i, ns in base.ns %}xmlns:{{i}}="{{ns}}" 
     {%endfor%}version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
-    <title>csv2rdf4lod provenance overview: publishings phase</title>
+    <title>Publishings Provenance</title>
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
-<!--    <h1>Classes available</h1>
-	<ul>
-    {% for row in models.main %}
-        <li><a href="{{lodspk.baseUrl}}special/instances/{{ row.resource.curie }}">{{row.resource.curie}}</a></li>
-    {% endfor %}
-    </ul>
--->
-<h1>Publishings</h1>
-<p>Previous stage: <a href='{{lodspk.baseUrl}}conversion/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of conversion</a></p>
-<p>The converted data is loaded into a triple store as a named graph. Related provenance infomation is shown as below.</p>
-<table border="1">
-<tr>
-<th>Time</th>
-<th>Inference rule</th>
-<th>Files loaded into the graph</th>
-<th>Graph name</th>
-<!--<th>Engine used</th>-->
-<th>Actor involved</th>
-</tr>
- {% for row in models.namedGraphsKnow %}
-<tr>
-<td>{{row.when.value|date:"H:i l F jS \o"}}</td>
-<td><a href="{{row.rule.value}}">{{row.rule.value}}</a></td>
-<td>{{row.fileFirst.value}}<br><br>{{row.fileFirstFirst.value}}</td>
-<td><a href="{{row.graphName.value}}">{{row.graphName.value}}</a></td>
-<!--<td><a href="{{row.engineType.value}}">{{row.engineType.value}}</a></td>-->
-<td><a href="{{row.user.value}}">{{row.user.value}}</a></td>
-</tr>
-    {% endfor %}
-</table>
+      <h1>Publishings</h1>
+
+      <p><a href='{{lodspk.baseUrl}}retrievals/{{lodspk.args.all}}'>provenance of retrievals</a> ->
+         <a href='{{lodspk.baseUrl}}preparations/{{lodspk.args.all}}'>provenance of preparations</a> ->
+         <a href='{{lodspk.baseUrl}}conversion/{{lodspk.args.all}}'>provenance of conversion</a> ->
+         provenance of publishings
+      </p>
+
+      <p>The converted data is loaded into a triple store as a named graph. Related provenance infomation is shown as below.</p>
+      <table border="1">
+         <tr>
+            <th>Time</th>
+            <th>Inference rule</th>
+            <th>Files loaded into the graph</th>
+            <th>Graph name</th>
+            <!--<th>Engine used</th>-->
+            <th>Actor involved</th>
+         </tr>
+         {% for row in models.namedGraphsKnow %}
+           <tr>
+              <td>{{row.when.value|date:"H:i l F jS \o"}}</td>
+              <td><a href="{{row.rule.value}}">{{row.rule.value|urifragment}}</a></td>
+              <td>{{row.fileFirst.value}}<br><br>{{row.fileFirstFirst.value}}</td>
+              <td><a href="{{row.graphName.value}}">{{row.graphName.value}}</a></td>
+              <!--<td><a href="{{row.engineType.value}}">{{row.engineType.value}}</a></td>-->
+              <td><a href="{{row.user.value}}">{{row.user.value}}</a></td>
+           </tr>
+         {% endfor %}
+      </table>
   </body>
 </html>
