--- a/components/services/retrievals/html.template
+++ b/components/services/retrievals/html.template
@@ -8,7 +8,13 @@
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
   </head>
   <body>
-    <h1>Retrievals</h1>
+    <p>
+       provenance of retrievals ->
+       <a href='{{lodspk.baseUrl}}prepartions/{{lodspk.args.all}}'>provenance of prepartions</a> ->
+       <a href='{{lodspk.baseUrl}}conversion/{{lodspk.args.all}}'>provenance of conversion</a> ->
+       <a href='{{lodspk.baseUrl}}publishings/{{lodspk.args.all}}'>provenance of publishings</a>
+    </p>
+
 
     <!--	<ul>
       <li>hi</li>
@@ -17,7 +23,8 @@
     {% endfor %}
     </ul> -->
 
-    <p>The following original sources were retrieved to create RDF datset {{lodspk.args.all|deurifier}}</p>
+    <h1>Retrievals</h1>
+    <p>The following original sources were retrieved to create RDF dataset {{lodspk.args.all|deurifier}}</p>
     <table border="1">
       <tr>
          <th>Source Data</th>
