--- a/components/services/retrievals/html.template
+++ b/components/services/retrievals/html.template
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
     "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" {% for i, ns in base.ns %}xmlns:{{i}}="{{ns}}" 
-    {%endfor%}version="XHTML+RDFa 1.0" xml:lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:prov="http://www.w3.org/ns/prov#" 
+         version="XHTML+RDFa 1.0" xml:lang="en">
   <head>
     <title>csv2rdf4lod provenance overview: retrievals phase</title>
     <link href="{{lodspk.baseUrl}}css/basic.css" rel="stylesheet" type="text/css" media="screen" />
@@ -47,7 +47,6 @@
          </tr>
        {% endfor %}
       </table>
-
-    <p>Subsequent stage: <a href='{{lodspk.baseUrl}}preparations/http/logd.tw.rpi.edu/source/lebot/dataset/golfers/version/2012-Mar-15'>provenance of preparations</a></p>
+      <p about="#results"><a rel="prov:used" href="{{lodspk.baseUrl}}prov-lodspeakr/components/services/retrievals/queries/get.query"/>query</a></p>
   </body>
 </html>
